--- a/bazel/cargo/remote/BUILD.version_check-0.9.2.bazel
+++ b/bazel/cargo/remote/BUILD.version_check-0.9.2.bazel
@@ -25,25 +25,20 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # Apache-2.0 from expression "Apache-2.0 OR MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "bench" with type "bench" omitted
-
 rust_library(
-    name = "hashbrown",
+    name = "version_check",
     srcs = glob(["**/*.rs"]),
     crate_features = [
-        "ahash",
-        "default",
-        "inline-more",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
     data = [],
-    edition = "2018",
+    edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -51,17 +46,8 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.9.1",
+    version = "0.9.2",
     # buildifier: leave-alone
     deps = [
-        "@raze__ahash__0_4_7//:ahash",
     ],
 )
-
-# Unsupported target "hasher" with type "test" omitted
-
-# Unsupported target "rayon" with type "test" omitted
-
-# Unsupported target "serde" with type "test" omitted
-
-# Unsupported target "set" with type "test" omitted
