--- a/bazel/cargo/remote/BUILD.bitflags-1.2.1.bazel
+++ b/bazel/cargo/remote/BUILD.bitflags-1.2.1.bazel
@@ -37,23 +37,12 @@ load(
 )
 
 cargo_build_script(
-    name = "winapi_build_script",
+    name = "bitflags_build_script",
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
     crate_features = [
-        "errhandlingapi",
-        "fileapi",
-        "handleapi",
-        "minwinbase",
-        "minwindef",
-        "ntdef",
-        "profileapi",
-        "std",
-        "sysinfoapi",
-        "timezoneapi",
-        "winbase",
-        "winerror",
+        "default",
     ],
     crate_root = "build.rs",
     data = glob(["**"]),
@@ -65,28 +54,17 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "0.3.9",
+    version = "1.2.1",
     visibility = ["//visibility:private"],
     deps = [
     ],
 )
 
 rust_library(
-    name = "winapi",
+    name = "bitflags",
     srcs = glob(["**/*.rs"]),
     crate_features = [
-        "errhandlingapi",
-        "fileapi",
-        "handleapi",
-        "minwinbase",
-        "minwindef",
-        "ntdef",
-        "profileapi",
-        "std",
-        "sysinfoapi",
-        "timezoneapi",
-        "winbase",
-        "winerror",
+        "default",
     ],
     crate_root = "src/lib.rs",
     crate_type = "lib",
@@ -99,9 +77,9 @@ rust_library(
         "cargo-raze",
         "manual",
     ],
-    version = "0.3.9",
+    version = "1.2.1",
     # buildifier: leave-alone
     deps = [
-        ":winapi_build_script",
+        ":bitflags_build_script",
     ],
 )
