--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -88,7 +88,6 @@ jobs:
 
     - name: Update Rust
       run: |
-        sudo apt install -y protobuf-compiler
         rustup toolchain install stable --component clippy --component rustfmt
         rustup target add wasm32-unknown-unknown
         rustup target add wasm32-wasi
@@ -133,7 +132,7 @@ jobs:
       run: cargo doc --no-deps --target=wasm32-unknown-unknown
 
     - name: Package (publish)
-      run: cargo publish --dry-run --target=wasm32-unknown-unknown --no-verify
+      run: cargo publish --dry-run --target=wasm32-unknown-unknown
 
   nightly:
     runs-on: ubuntu-latest
@@ -143,7 +142,6 @@ jobs:
 
     - name: Update Rust
       run: |
-        sudo apt install -y protobuf-compiler
         rustup toolchain install nightly --component clippy --component rustfmt
         rustup +nightly target add wasm32-unknown-unknown
         rustup +nightly target add wasm32-wasi
@@ -189,7 +187,7 @@ jobs:
       run: cargo doc --no-deps --target=wasm32-unknown-unknown
 
     - name: Package (publish)
-      run: cargo publish --dry-run --target=wasm32-unknown-unknown --no-verify
+      run: cargo publish --dry-run --target=wasm32-unknown-unknown
 
   outdated:
     runs-on: ubuntu-latest
