--- a/bazel/cargo/remote/BUILD.libc-0.2.97.bazel
+++ b/bazel/cargo/remote/BUILD.libc-0.2.97.bazel
@@ -10,9 +10,10 @@ load("@bazel_skylib//lib:selects.bzl", "selects")
 
 # buildifier: disable=load
 load(
-    "@rules_rust//rust:rust.bzl",
+    "@rules_rust//rust:defs.bzl",
     "rust_binary",
     "rust_library",
+    "rust_proc_macro",
     "rust_test",
 )
 
@@ -69,7 +70,6 @@ rust_library(
         "std",
     ],
     crate_root = "src/lib.rs",
-    crate_type = "lib",
     data = [],
     edition = "2015",
     rustc_flags = [
@@ -77,6 +77,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=libc",
         "manual",
     ],
     version = "0.2.97",
