fix: update BUILD configs
Signed-off-by: Martijn Swaagman <martijn@swaagman.online>

--- a/examples/BUILD
+++ b/examples/BUILD
@@ -1,10 +1,10 @@
-load("@rules_rust//rust:rust.bzl", "rust_binary")
+load("@rules_rust//rust:defs.bzl", "rust_binary")
 
 rust_binary(
     name = "hello_world",
     srcs = ["hello_world.rs"],
     crate_type = "cdylib",
-    edition = "2018",
+    edition = "2021",
     out_binary = True,
     deps = [
         "//:proxy_wasm",
@@ -21,7 +21,7 @@ rust_binary(
     name = "http_auth_random",
     srcs = ["http_auth_random.rs"],
     crate_type = "cdylib",
-    edition = "2018",
+    edition = "2021",
     out_binary = True,
     deps = [
         "//:proxy_wasm",
@@ -33,7 +33,7 @@ rust_binary(
     name = "http_headers",
     srcs = ["http_headers.rs"],
     crate_type = "cdylib",
-    edition = "2018",
+    edition = "2021",
     out_binary = True,
     deps = [
         "//:proxy_wasm",
@@ -45,7 +45,7 @@ rust_binary(
     name = "http_body",
     srcs = ["http_body.rs"],
     crate_type = "cdylib",
-    edition = "2018",
+    edition = "2021",
     out_binary = True,
     deps = [
         "//:proxy_wasm",
@@ -57,7 +57,7 @@ rust_binary(
     name = "http_config",
     srcs = ["http_config.rs"],
     crate_type = "cdylib",
-    edition = "2018",
+    edition = "2021",
     out_binary = True,
     deps = [
         "//:proxy_wasm",
