--- a/bazel/cargo/remote/BUILD.version_check-0.9.4.bazel
+++ b/bazel/cargo/remote/BUILD.version_check-0.9.4.bazel
@@ -26,21 +26,13 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # Apache-2.0 from expression "Apache-2.0 OR MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "integers" with type "example" omitted
-
-# Unsupported target "paths" with type "example" omitted
-
-# Unsupported target "traits" with type "example" omitted
-
-# Unsupported target "versions" with type "example" omitted
-
 rust_library(
-    name = "autocfg",
+    name = "version_check",
     srcs = glob(["**/*.rs"]),
     crate_features = [
     ],
@@ -52,13 +44,11 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
-        "crate-name=autocfg",
+        "crate-name=version_check",
         "manual",
     ],
-    version = "1.0.1",
+    version = "0.9.4",
     # buildifier: leave-alone
     deps = [
     ],
 )
-
-# Unsupported target "rustflags" with type "test" omitted
