chore: regenerate artifacts
Signed-off-by: Martijn Swaagman <martijn@swaagman.online>

--- a/bazel/cargo/remote/BUILD.once_cell-1.9.0.bazel
+++ b/bazel/cargo/remote/BUILD.once_cell-1.9.0.bazel
@@ -10,9 +10,10 @@ load("@bazel_skylib//lib:selects.bzl", "selects")
 
 # buildifier: disable=load
 load(
-    "@rules_rust//rust:rust.bzl",
+    "@rules_rust//rust:defs.bzl",
     "rust_binary",
     "rust_library",
+    "rust_proc_macro",
     "rust_test",
 )
 
@@ -50,10 +51,8 @@ rust_library(
     crate_features = [
         "alloc",
         "race",
-        "unstable",
     ],
     crate_root = "src/lib.rs",
-    crate_type = "lib",
     data = [],
     edition = "2018",
     rustc_flags = [
@@ -61,9 +60,10 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=once_cell",
         "manual",
     ],
-    version = "1.8.0",
+    version = "1.9.0",
     # buildifier: leave-alone
     deps = [
     ],
