--- a/bazel/cargo/remote/BUILD.time-0.1.43.bazel
+++ b/bazel/cargo/remote/BUILD.time-0.1.43.bazel
@@ -10,9 +10,10 @@ load("@bazel_skylib//lib:selects.bzl", "selects")
 
 # buildifier: disable=load
 load(
-    "@rules_rust//rust:rust.bzl",
+    "@rules_rust//rust:defs.bzl",
     "rust_binary",
     "rust_library",
+    "rust_proc_macro",
     "rust_test",
 )
 
@@ -38,7 +39,6 @@ rust_library(
     crate_features = [
     ],
     crate_root = "src/lib.rs",
-    crate_type = "lib",
     data = [],
     edition = "2015",
     rustc_flags = [
@@ -46,12 +46,13 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=time",
         "manual",
     ],
     version = "0.1.43",
     # buildifier: leave-alone
     deps = [
-        "@raze__libc__0_2_97//:libc",
+        "@raze__libc__0_2_116//:libc",
     ] + selects.with_or({
         # cfg(windows)
         (
