--- a/bazel/cargo/remote/BUILD.hashbrown-0.12.0.bazel
+++ b/bazel/cargo/remote/BUILD.hashbrown-0.12.0.bazel
@@ -33,6 +33,8 @@ licenses([
 
 # Unsupported target "bench" with type "bench" omitted
 
+# Unsupported target "insert_unique_unchecked" with type "bench" omitted
+
 rust_library(
     name = "hashbrown",
     srcs = glob(["**/*.rs"]),
@@ -43,7 +45,7 @@ rust_library(
     ],
     crate_root = "src/lib.rs",
     data = [],
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -52,7 +54,7 @@ rust_library(
         "crate-name=hashbrown",
         "manual",
     ],
-    version = "0.11.2",
+    version = "0.12.0",
     # buildifier: leave-alone
     deps = [
         "@raze__ahash__0_7_6//:ahash",
