dist: use time in stead of chrono and update lockfile
Signed-off-by: Martijn Swaagman <martijn@swaagman.online>

--- a/bazel/cargo/remote/BUILD.num_threads-0.1.3.bazel
+++ b/bazel/cargo/remote/BUILD.num_threads-0.1.3.bazel
@@ -26,22 +26,16 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # Apache-2.0 from expression "Apache-2.0 OR MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
 
-# Unsupported target "integers" with type "example" omitted
-
-# Unsupported target "paths" with type "example" omitted
-
-# Unsupported target "traits" with type "example" omitted
-
-# Unsupported target "versions" with type "example" omitted
-
 rust_library(
-    name = "autocfg",
+    name = "num_threads",
     srcs = glob(["**/*.rs"]),
+    aliases = {
+    },
     crate_features = [
     ],
     crate_root = "src/lib.rs",
@@ -52,13 +46,23 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
-        "crate-name=autocfg",
+        "crate-name=num_threads",
         "manual",
     ],
-    version = "1.0.1",
+    version = "0.1.3",
     # buildifier: leave-alone
     deps = [
-    ],
+    ] + selects.with_or({
+        # cfg(any(target_os = "macos", target_os = "freebsd"))
+        (
+            "@rules_rust//rust/platform:i686-apple-darwin",
+            "@rules_rust//rust/platform:x86_64-apple-darwin",
+            "@rules_rust//rust/platform:aarch64-apple-darwin",
+            "@rules_rust//rust/platform:i686-unknown-freebsd",
+            "@rules_rust//rust/platform:x86_64-unknown-freebsd",
+        ): [
+            "@raze__libc__0_2_116//:libc",
+        ],
+        "//conditions:default": [],
+    }),
 )
-
-# Unsupported target "rustflags" with type "test" omitted
