Add proxy_wasm::main macro.
This is primarly a mechanism to deliver a workaround for a breaking
change in Rust v1.56.0 (which updated LLVM to v13.0), which changed
existing reactors into multi-entry commands, leading to performance
degradation and/or unusable Proxy-Wasm plugins.

See: https://github.com/WebAssembly/WASI/issues/471

This is delivered as a macro to make it somehow compatible with the
unstable "-Z wasi-exec-model=reactor" feature.

Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -195,6 +195,41 @@ jobs:
     - name: Package (publish)
       run: cargo publish --dry-run --target=wasm32-unknown-unknown
 
+  reactor:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Update Rust
+      run: |
+        rustup toolchain install nightly --component clippy
+        rustup +nightly target add wasm32-wasi
+        rustup default nightly
+
+    - name: Rewrite Cargo.toml examples
+      run: grep -v '^crate-type' Cargo.toml > Cargo.tmp && mv Cargo.tmp Cargo.toml
+
+    - name: Build (wasm32-wasi)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S -Z wasi-exec-model=reactor
+      run: cargo build --release --all-targets --target=wasm32-wasi
+
+    - name: Build (wasm32-wasi with wee-alloc)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S -Z wasi-exec-model=reactor
+      run: cargo build --release --all-targets --target=wasm32-wasi --features=wee-alloc
+
+    - name: Clippy (wasm32-wasi)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S -Z wasi-exec-model=reactor
+      run: cargo clippy --release --all-targets --target=wasm32-wasi
+
+    - name: Clippy (wasm32-wasi with wee-alloc)
+      env:
+        RUSTFLAGS: -D warnings -C link-args=-S -Z wasi-exec-model=reactor
+      run: cargo clippy --release --all-targets --target=wasm32-wasi --features=wee-alloc
+
   outdated:
     runs-on: ubuntu-latest
 
